# crow_x_nginx_test

./: .gitignore
nginx/: settings
src/: CMakeLists.txt  main.cpp
static/: script.js  style.css
templates/: index.html
